test: acercar cobertura total del backend al cien por ciento